# enron

./: Dockerfile  README.md  app.py  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci_workflow.yaml
app/: app.py
cfg/: config.ini
models/: base_model.py  embedding.py
tests/: test_embedding.py
