[tool.poetry]
name = "enron"
version = "0.1.0"
description = ""
authors = ["Karel Durkota <karel.durkota@gmail.com>"]
packages = [
    { include = "app" },
    { include = "models" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
sentence-transformers = "^2.0.0"
spacy = "^3.1.2"
platformdirs = "^2.3.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "2.11.1"
pytest-html = "3.1.1"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
